[project]
name = "lw-gflow"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dissect>=3.22",
    "fastapi>=0.135.2",
    "opensearch-py>=3.1.0",
    "orjson>=3.11.7",
    "taskiq>=0.12.1",
    "taskiq-aio-pika>=0.6.0",
    "taskiq-postgres[asyncpg]>=0.7.0",
    "uvicorn>=0.42.0",
]
